# oopsallyaml

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  oopsallyaml.py  pre-commit-hooks.schema.yaml  pyproject.toml  test_oopsallyaml.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: main.yml
.yamlschemas/: dependabot.schema.yaml  github-workflow.schema.yaml  pre-commit-config.schema.yaml  pre-commit-hooks.schema.yaml
tests/file-not-found/: test_spec.json
tests/invalid-yaml/: invalid.yaml  test_spec.json
tests/no-schema/: no-schema.yaml  test_spec.json
tests/no-schema-header/: no-schema-header.yaml  test_spec.json
tests/schema-opt-out/: schema-opt-out.yaml  test_spec.json
tests/schema-valid/: test_spec.json  valid.yaml
tests/schema-valid/.yamlschemas/: simple.schema.yaml
tests/yaml-from-hell/: from-hell.yaml  test_spec.json
tests/yaml-from-hell/.yamlschemas/: yamlfromhell.schema.yaml
