[project]
name = "oopsallyaml"

[tool.poetry]
name = "oopsallyaml"
version = "0.1.0"
description = "A pre-commit hook that validates all YAML files against their schemas using Yamale."
authors = ["Edward Toroshchyn <dev@hades.name>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
yamale = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
mypy = "^1.18.2"
types-pyyaml = "^6.0.12.20250915"
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
oopsallyaml = "oopsallyaml:main"

[tool.ruff]
line-length = 120
indent-width = 2
target-version = "py39"

[tool.ruff.lint]
select = ["B", "C4", "DTZ", "E", "F", "G", "I", "N", "UP", "W"]
