[project]
name = "oopsallyaml"
version = "0.1.0"
description = "A pre-commit hook that validates all YAML files against their schemas using Yamale."
authors = [{ name = "Edward Toroshchyn", email = "dev@hades.name" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
dependencies = ["yamale>=6.0.0,<7"]

[project.scripts]
oopsallyaml = "oopsallyaml:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "mypy>=1.18.2,<2",
    "types-pyyaml>=6.0.12.20250915,<7",
    "ruff>=0.14.5,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 2
target-version = "py39"

[tool.ruff.lint]
select = ["B", "C4", "DTZ", "E", "F", "G", "I", "N", "UP", "W"]
